--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
 <body style="margin: 0; overflow: hidden">
     <a-scene vr-mode-ui="enabled: false" embedded arjs="sourceType: webcam; debugUIEnabled: false;">
         <!-- 3D模型 -->
-        <a-entity gps-entity-place="latitude: 24.82142159739652; longitude: 121.02621978242492;"
+        <!-- <a-entity gps-entity-place="latitude: 24.82142159739652; longitude: 121.02621978242492;"
             gltf-model="url(https://example.com/path/to/your/model.glb)" scale="5 5 5"
-            look-at="[gps-camera]"></a-entity>
+            look-at="[gps-camera]"></a-entity> -->
+
+        <a-box gps-entity-place="latitude: 24.821155859855374; longitude: 121.0259271377913;" color="red" depth="100"
+            height="100" width="100" look-at="[gps-camera]"></a-box>
+
+        <a-cylinder gps-entity-place="latitude: 24.821418718629044; longitude: 121.02579424104425;" color="blue"
+            height="300" radius="100" look-at="[gps-camera]"></a-cylinder>
 
         <!-- 文字 -->
-        <a-text value="This is a fixed text." look-at="[gps-camera]" scale="10 10 10"
+        <a-text value="This is a fixed text." look-at="[gps-camera]" scale="200 200 200"
             gps-entity-place="latitude: 24.82142159739652; longitude: 121.02621978242492;"></a-text>
 
         <a-camera gps-camera rotation-reader> </a-camera>
