--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             gps-new-entity-place="latitude: 24.821625704592652; longitude: 121.02640444360004;" side="double"
             align="center"></a-text>
 
-        <a-camera gps-camera="simulateLatitude: 24.82142159739652; simulateLongitude: 121.02621978242492;"
+        <a-camera gps-camera="simulateLatitude: 24.82142159739652; simulateLongitude: 121.02621978242492; simulateAltitude: 300;"
             rotation-reader far="9000"> </a-camera>
     </a-scene>
 </body>
