--- a/index.html
+++ b/index.html
@@ -2,35 +2,41 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>WebAR + GPS</title>
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>AR.JS Demo with Location Simulation and Altitude</title>
+    <script
+        src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js">
+    </script>
     <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <script src='https://raw.githack.com/cmcfadden/AR.js/master/aframe/build/aframe-ar.js'></script>
+    <script>
+        THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
+    </script>
 </head>
 
-<body style="margin: 0; overflow: hidden">
-    <a-scene vr-mode-ui="enabled: false" embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-        <!-- 3D模型 -->
-        <!-- <a-entity gps-entity-place="latitude: 24.82142159739652; longitude: 121.02621978242492;"
-            gltf-model="url(https://example.com/path/to/your/model.glb)" scale="5 5 5"
-            look-at="[gps-camera]"></a-entity> -->
+<body style='margin: 0; overflow: hidden;'>
+    <a-scene vr-mode-ui="enabled: false" embedded
+        arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
 
-        <a-box gps-new-entity-place="latitude: 24.821155859855374; longitude: 121.0259271377913;" color="red" depth="1"
-            height="1" width="1" look-at="[gps-camera]"></a-box>
+        <a-text value="parking lot" gps-new-entity-place="latitude: 24.821606723437057; longitude: 121.02627622688387;" position="0 320 0"
+            rotation="0 0 0" font="mozillavr" color="#e43e31" look-at="#camera" side="double" align="center"
+            width="400">
+        </a-text>
 
-        <a-cylinder gps-new-entity-place="latitude: 24.821418718629044; longitude: 121.02579424104425;" color="blue"
-            height="3" radius="1" position="0 3 0" look-at="[gps-camera]"></a-cylinder>
+        <a-text value="Taipei City Dashboard" gps-entity-place="latitude: 24.821524831160087; longitude: 121.02589976027265;" position="0 320 0"
+            rotation="0 0 0" scale="0.1 0.1 0.1" font="mozillavr" color="white" look-at="#camera" side="double" align="center"
+            width="400">
+        </a-text>
+ 
 
-        <!-- 文字 -->
-        <a-text value="This is a fixed text." scale="2 2 2" look-at="[gps-camera]"
-            gps-new-entity-place="latitude: 24.821625704592652; longitude: 121.02640444360004;" side="double"
-            align="center"></a-text>
-
-        <a-camera gps-camera="simulateLatitude: 24.82142159739652; simulateLongitude: 121.02621978242492; simulateAltitude: 300;"
-            rotation-reader far="9000"> </a-camera>
+        <a-text value="milksha" gps-entity-place="latitude: 24.820801917677194; longitude: 121.02595576357018;" position="0 320 0"
+            rotation="0 0 0" font="mozillavr" color="#e43e31" look-at="#camera" side="double" align="center"
+            width="200">
+        </a-text>
+        <a-camera id="camera"
+            gps-camera="simulateLatitude:  24.821406228456084; simulateLongitude: 121.0262046671148; simulateAltitude: 300"
+            rotation-reader far=900000>
+        </a-camera>
     </a-scene>
 </body>
-
-</html>
