--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             position="0 2 0" rotation="0 0 0" font="mozillavr" color="#e43e31" look-at="#camera" side="double"
             align="center" scale="10 10 10">
         </a-text>
-        <a-camera id="camera" gps-camera rotation-reader far=900000>
+        <a-camera id="camera" gps-camera="simulateLatitude: 24.821413416378828; simulateLongtitude: 121.02623662258087;" rotation-reader far=900000>
         </a-camera>
     </a-scene>
 </body>
