--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body style='margin: 0; overflow: hidden;'>
     <a-scene vr-mode-ui="enabled: false" embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
 
-        <!-- <a-text value="parking lot" gps-entity-place="latitude: 24.821606723437057; longitude: 121.02627622688387;" <!--
+        <!-- <a-text value="parking lot" gps-entity-place="latitude: 24.821606723437057; longitude: 121.02627622688387;"
             position="0 -320 0" rotation="0 0 0" font="mozillavr" color="#e43e31" look-at="#camera" side="double"
             align="center" width="400">
         </a-text> -->
@@ -44,20 +44,28 @@
         </a-text> -->
 
         <!-- 辛亥國小地下停車場 -->
-        <a-text value="lot1 82/129" gps-entity-place="latitude: 25.006062; longitude: 121.558326;" position="0 10 0"
-            rotation="0 0 0" font="mozillavr" color="#e43e31" look-at="#camera" side="double" align="center"
-            width="400">
+        <a-text value="Xinhai" gps-entity-place="latitude: 25.006062; longitude: 121.558326;" position="0 50 0"
+            rotation="0 0 0" font="mozillavr" color="yellow" look-at="#camera" side="double" align="center" width="400">
+        </a-text>
+        <a-text value="[Lot] 93/129" gps-entity-place="latitude: 25.006062; longitude: 121.558326;" position="0 20 0"
+            rotation="0 0 0" font="mozillavr" color="white" look-at="#camera" side="double" align="center" width="400">
         </a-text>
 
         <!-- 興德路臨時平面停車場 -->
-        <a-text value="lot2 23/50" gps-entity-place="latitude: 25.004460; longitude: 121.556855;" position="0 10 0"
-            rotation="0 0 0" font="mozillavr" color="#e43e31" look-at="#camera" side="double" align="center"
-            width="400">
+        <a-text value="Hing Tak Road" gps-entity-place="latitude: 25.004460; longitude: 121.556855;" position="0 50 0"
+            rotation="0 0 0" font="mozillavr" color="yellow" look-at="#camera" side="double" align="center" width="400">
         </a-text>
+        <a-text value="[Lot] 3/7" gps-entity-place="latitude: 25.004460; longitude: 121.556855;" position="0 20 0"
+            rotation="0 0 0" font="mozillavr" color="white" look-at="#camera" side="double" align="center" width="400">
+        </a-text>
+
         <!-- 萬芳八號公園停車場 -->
-        <a-text value="lot3 23/50" gps-entity-place="latitude: 25.003044; longitude: 121.560661;" position="0 10 0"
-            rotation="0 0 0" font="mozillavr" color="#e43e31" look-at="#camera" side="double" align="center"
-            width="400">
+        <a-text value="Man Fong No. 8 Park" gps-entity-place="latitude: 25.003044; longitude: 121.560661;"
+            position="0 50 0" rotation="0 0 0" font="mozillavr" color="yellow" look-at="#camera" side="double"
+            align="center" width="400">
+        </a-text>
+        <a-text value="93/105" gps-entity-place="latitude: 25.003044; longitude: 121.560661;" position="0 20 0"
+            rotation="0 0 0" font="mozillavr" color="white" look-at="#camera" side="double" align="center" width="400">
         </a-text>
 
         <a-camera id="camera" gps-camera="simulateLatitude: 25.004236; simulateLongtitude: 121.5606877;" rotation-reader
