--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             align="center" width="400">
         </a-text> -->
 
-        <a-text value="Taipei City Dashboard"
+        <!-- <a-text value="Taipei City Dashboard"
             gps-entity-place="latitude: 25.004236270930743; longitude: 121.56068776773716;" position="0 320 0"
             rotation="0 0 0" font="mozillavr" color="white" look-at="#camera" side="double" align="center" width="400">
         </a-text> -->
